style.css
 html, body{
   overflow-x: hidden;
   background-color:#FDFDFD;
 }
 body {
   font-family: "europa", sans-serif;
   color:#4B4B4B;
   margin: 0 auto;
   padding: 0 30px;
   letter-spacing: 0.06em;
   max-width: 940px;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: "europa", sans-serif;
   font-style:normal;
 }
 .transitionable {
	background: url(paycrave-project@3x.jpg) no-repeat -9999px -9999px;
	background: url(funder-project@3x.jpg) no-repeat -9999px -9999px;
 }
 i {
    margin: 6px 0 0 45px;
    font-size: 22px;
    color:#4B4B4B;
 }
 #email-button:hover{
    transform: translateY(-4px);
    transition: transform 0.4s ease-in-out;
 }
 #linkedin-button:hover{
    transform: translateY(-4px);
    transition: transform 0.4s ease-in-out;
 }
 #twitter-button:hover{
    transform: translateY(-4px);
    transition: transform 0.4s ease-in-out;
 }
 .blue-link{
    color: #538ED2;
 }
 .blue-link:hover{
    color: #63ABFF;
    transition: color 0.4s ease-in-out;
 }
 h1 {
   font-size:60px;
   font-style:normal;
   font-weight:700;
   line-height: 1.3;
 }
 .clearfix::after {
    content: "";
    clear: both;
    display: table;
 }
 .intro{
   padding-top: 40%;
   max-width: 525px;
 }
 .first-intro{
   padding-bottom: 20%;
 }
 .second-intro{
   color:#6F6F6F;
   font-weight:400;   
   padding-bottom: 250px;
 }
 h2 {
   font-size:22px; 
   font-weight:700;
   line-height: 1.7;
 }
 h3 {
   font-size:18px;
   font-weight:700;
 }
 p {
   font-size: 18px;
   font-weight: 400;
   color: #6F6F6F;
   max-width: 310px;
   padding-bottom: 100px;
   line-height: 1.8;
 }
 .nav-left {
    display: inline-block;
    margin-top: 40px;
    float: left;
    width: 42px;
 }
 #top-about-button{
    visibility: hidden;
 }
 .nav-right{
    display: inline-block;
    margin-top: 45px;
    text-align: right;
    float: right;
    width: auto;
    overflow: hidden;
    color: #6F6F6F;
    height: 42px;
 }
 .project{
   width: 100%;
   height: 250px;
   background-repeat: no-repeat;
   background-size: 750px;
   border-radius: 20px;
   box-shadow: 0 20px 31px 0 #DDDDDD;
   margin-bottom: 50px;
   background-position: 50% 50%;
   margin: 0 auto;
 }
 #paycrave{
    border-radius: 20px;
    box-shadow: 0 20px 31px 0 #DDDDDD;
    margin-bottom: 50px;
    background-image: url(paycraveOverlay@3x.jpg)
 }
 #funder{
    border-radius: 20px;
    box-shadow: 0 20px 31px 0 #DDDDDD;
    margin-bottom: 50px;
    background-image: url(funderOverlay@3x.jpg)
 }
 .projects {
   padding-top: 50px;
   padding-bottom: 200px;
 }
 .about-me-intro{
   padding-bottom: 20px;
 }
 .first-paragraph, .second-paragraph, .third-paragraph{
   padding-bottom: 20px;     
 }
 .profile-picture{
   margin-left: 25%;
   padding: 30px 0;
 }
 .profile-pictures{
   margin: 0 auto;
 }
 .about-me-left, .about-me-right{
   padding-bottom: 150px;
 }
 .contact-button-bottom{
   margin-bottom: 180px;
   line-height: 1.8;
 }

/* Hover-Underline Animation */

ul{
  position: relative;
  padding: 0px;
  list-style: none;
}

ul li{
  position:relative;
  font-size: 16px;
  display: inline-flex;
  padding: 0 0 0 40px;
  font-family: "europa", sans-serif;
  color:#4B4B4B;
  font-weight:700;
  text-align: right;
}

a{
  text-decoration: none;
  color: #4B4B4B;
}
     
/* Projects */


@media (min-width: 768px)  {
  .body{
    margin: 0 20%;
  }
  .intro{
   padding-top: 250px;
   max-width: 525px;
  }
  .first-intro{
   padding-bottom: 50px;
  }
  .second-intro{
   color:#6F6F6F;
   font-weight:400;   
   padding-bottom: 250px;
  }
  #top-about-button{
   visibility:visible;
  }
  .projects{
   padding-bottom: 200px;  
  }
  .project{
   height: 360px;
   background-size: 940px;
  }
  .about-me-left{
   width: 50%;
   float: left;
   letter-spacing: 0.05em;
   display:block;
  }
  .about-me-right{
   width: 50%;
   float: right;
   margin-bottom: 100px;
   display:block;
  }
  #paycrave{
   background-image: url('paycrave-project@3x.jpg')
  }
  #funder{
   background-image: url('funder-project@3x.jpg')
  }
  #paycrave:hover {
   background-image: url('paycraveOverlay@3x.jpg') !important;
   background-size: 940px;
   background-position: 50% 50%;
   transition: background-image 0.5s ease-in-out;
  }
  #funder:hover {
   background-image: url('funderOverlay@3x.jpg') !important;
   background-size: 940px;
   background-position: 50% 50%;
   transition: background-image 0.5s ease-in-out;
  }
  .transitionable {
   transition: background-image 0.5s ease-in-out;
  }
}
    
@media (min-width: 940px) {
  .project{
   height: 360px;
  }
}

/*
 * Keyframes
 */

@m-header fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@m-page fadeInUp {
  0% {
    opacity: 0;
    transform: translate3d(0, 100%, 0);
  }

  100% {
    opacity: 1;
    transform: none;
  }
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    transform: translate3d(100%, 0, 0);
  }

  100% {
    opacity: 1;
    transform: none;
  }
}

}

/*
 * CSS Page Transitions
 * Don't forget to add vendor prefixes!
 */
.m-scene {
  /** Basic styles for an animated element */
  .scene_element {
    animation-duration: 0.25s;
    transition-timing-function: ease-in;
    animation-fill-mode: both;

  }

  /** An element that fades in */
  .scene_element--fadein {
    animation-name: fadeIn;
  }

  /** An element that fades in and slides up */
  .scene_element--fadeinup {
    animation-name: fadeInUp;
  }

  /** An element that fades in and slides from the right */
  .scene_element--fadeinright {
    animation-name: fadeInRight;
  }
}

